@@ -5,9 +5,11 @@ function (object)
         stop("Needs results from constrained ordination")
     u <- object$CCA$u
     wa <- object$CCA$wa
-    r <- sqrt(weights(object, "sites"))
-    u <- sweep(u, 1, r, "*")
-    wa <- sweep(wa, 1, r, "*")
+    if (!inherits(object, "rda")) { # is CCA
+        r <- sqrt(object$rowsum)
+        u <- sweep(u, 1, r, "*")
+        wa <- sweep(wa, 1, r, "*")
+    }
     diag(cor(u, wa))
 }
 
